# g29py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  button-map.md  effect-map.md  wiibrew-wheel.md
etc/: Dockerfile
examples/: anticenter_sweep.py  dial_events.py
g29py/: __init__.py  g29.py  params.py
g29py/advanced/: __init__.py  torque.py
scripts/: capture_packets.py  hardware_smoke.py  print_state.py  print_steering.py  test_effects.py  test_torque_simulation.py
tests/: test_decode.py  test_events.py  test_g29.py  test_steering_torque.py  test_write_effects.py
